--- a/app/index.html
+++ b/app/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Задание 6</title>
-        <!--build:css css/style.min.css-->
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/jquery-ui.css">
-        <!--endbuild-->
-    </head>
-    <body>
-        <form id="form" method="post">
-            <input type="text" name="username" placeholder="Username">
-            <input type="password" name="password" placeholder="Password">
-            <input type="text" name="email" placeholder="e-mail">
-            <input type="text" name="gender" placeholder="gender">
-            <input type="text" name="credit card" placeholder="credit cart">
-            <input type="text" name="bio" placeholder="bio">
-            <input type="text" name="birth" id="birth" placeholder="birth">
-            <input type="button" id="send" value="Отправить">
-            <input type="button" id="test" value="Заполнить тестовыми данными">
-        </form>
-        <div class="progressbar" id="progressbar"></div>
-        <!--build:js js/script.min.js-->
-        <script src="js/jquery.js"></script>
-        <script src="js/jquery-ui.js"></script>
-        <script src="js/script.js"></script>
-        <!--endbuild-->
-    </body>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Голосовалка</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<div id="voter" class="voter">
+    <span class="down">—</span>
+    <span class="vote">0</span>
+    <span class="up">+</span>
+</div>
+<script src="js/script.js"></script>
+</body>
 </html>
